fixed login form vertical alignment

--- a/public/css/authentication.css
+++ b/public/css/authentication.css
@@ -1,6 +1,6 @@
 .container {
     height: 100vh;
-    padding-bottom: 10vh;
+    padding-bottom: 15%;
 }
 
 .size {
